Update with a z-index fix and also don't allow tooltip to appear off page

--- a/src/tooltip.css
+++ b/src/tooltip.css
@@ -6,4 +6,5 @@
 	color: white;
 	border-radius: 2px;
 	box-shadow: 0 1px 4px 0 rgba(0,0,0,.26);
+	z-index: 100000;
 }
